Photo/Name alignment fix
Achieved with inline-blocks instead of floats

--- a/css/main.css
+++ b/css/main.css
@@ -82,14 +82,14 @@ body > main {
 }
 
 .user-label div {
-  float: left;
-  padding: 1rem .5rem 1rem 1rem;
-  width: 30%;
+  display: inline-block;
+  padding: .5rem;
+  width: 25%;
+  vertical-align: bottom;
 }
 
 .user-label div:last-child {
   width: 70%;
-  padding: 2rem 1rem 1rem .5rem;
 }
 
 .user-label .user-pp {
